--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/andriii888/WebCinema.git"
+    "url": "git+https://goitacademy/parcel-project-template.git"
   },
   "keywords": [],
   "author": "Andrii Chuiko <andrii888@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/andriii888/WebCinema/issues"
+    "url": "https://goitacademy/parcel-project-template.git/issues"
   },
   "dependencies": {
     "axios": "^1.2.1",
